Work around address bar issue on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -8,4 +8,7 @@ body {
 
   padding: 0;
   margin: 0;
+
+  // In case we have very little content, we don't want a stubby page
+  min-height: 100vh;
 }
