--- a/src/layout/header.module.scss
+++ b/src/layout/header.module.scss
@@ -1,7 +1,22 @@
 @import '../values.scss';
 
 .header {
-  height: 100vh;
+  // The goal is to have the header as tall as the page height so that it looks
+  // fullscreen but can then be scrolled past. This falls apart on mobile where
+  // the address bar can show or hide depending on how the user is scrolling.
+  //
+  // By design, the `vh` unit always assumes that the address bar is not there.
+  // This is so that the page doesn't start rerendering and convulsing wildly
+  // as the user scrolls.
+  //
+  // One alternative is to use `100%` but that really only works on the `<html>`
+  // which in this case would not fly.
+  //
+  // The compromise here is to take `100vh` but leave some space for the bar.
+  // It's not perfect but it's close to the effect I wanted. Also, it's much
+  // better at indicating that the page continues and that you can scroll.
+  height: calc(100vh - 5rem);
+
   background-color: $black;
   color: $white;
   padding: 3rem 1.5rem;
